--- a/tests/parsing/scripts/basic-loops.yaml
+++ b/tests/parsing/scripts/basic-loops.yaml
@@ -1,27 +1,37 @@
-name: basic_loops
+name: loops
 categories:
 - loops
 tests:
 
-- name: basic_until_do
+- name: until_do
   categories:
   - until_do
   tests:
   - script: 'until 1 do 2'
     result:
       _class: UntilDo
+      name: null
+      until: 1
+      do: 2
+      otherwise: null
+  - script: 'until @name 1 do 2'
+    result:
+      _class: UntilDo
+      name: 'name'
       until: 1
       do: 2
       otherwise: null
   - script: 'until 1 do 2 otherwise 3'
     result:
       _class: UntilDo
+      name: null
       until: 1
       do: 2
       otherwise: 3
   - script: 'until 1 do 2 except when 3 then 4'
     result:
       _class: UntilDo
+      name: null
       until: 1
       do:
         _class: If
@@ -32,6 +42,7 @@ tests:
   - script: 'until 1 do 2 except when 3 then 4 otherwise 5'
     result:
       _class: UntilDo
+      name: null
       until: 1
       do:
         _class: If
@@ -42,6 +53,7 @@ tests:
   - script: 'until 1 + 2 do 3'
     result:
       _class: UntilDo
+      name: null
       until:
         _class: Math
         left: 1
@@ -52,6 +64,7 @@ tests:
   - script: 'until 1 do 2 > 3'
     result:
       _class: UntilDo
+      name: null
       until: 1
       do:
         _class: Comparison
@@ -62,6 +75,7 @@ tests:
   - script: 'until 1 + 2 do 3 >= 4'
     result:
       _class: UntilDo
+      name: null
       until:
         _class: Math
         left: 1
@@ -76,6 +90,7 @@ tests:
   - script: 'until test >=  5 do test = test & 1d6'
     result:
       _class: UntilDo
+      name: null
       until:
         _class: Comparison
         left:
@@ -100,6 +115,7 @@ tests:
   - script: 'until test > 25 do test = test & 1d6'
     result:
       _class: UntilDo
+      name: null
       until:
         _class: Comparison
         left:
@@ -124,6 +140,38 @@ tests:
   - script: 'until test > 25 do test = test & 1d6 otherwise test = {@0}'
     result:
       _class: UntilDo
+      name: null
+      until:
+        _class: Comparison
+        left:
+          _class: Reference
+          value: 'test'
+        op: '>'
+        right: 25
+      do:
+        _class: Assignment
+        target: 'test'
+        value:
+          _class: RollMath
+          left:
+            _class: Reference
+            value: 'test'
+          op: '&'
+          right:
+            _class: Dice
+            number_of_dice: 1
+            sides: 6
+      otherwise:
+        _class: Assignment
+        target: 'test'
+        value:
+          _class: Enlarge
+          size: null
+          value: 0
+  - script: 'until @name test > 25 do test = test & 1d6 otherwise test = {@0}'
+    result:
+      _class: UntilDo
+      name: 'name'
       until:
         _class: Comparison
         left:
@@ -152,305 +200,109 @@ tests:
           size: null
           value: 0
 
-#FIXME
-- name: basic_do_until
+- name: restart
   categories:
-  - do_until
+  - restart
   tests:
-  - script: 'do 1 until 2'
+  - script: 'restart before'
     result:
-    - 1
-    - _class: UntilDo
-      do: 1
-      until: 2
-      otherwise: null
-  - script: 'do 1 until 2 otherwise 3'
+      _class: Restart
+      location_specifier:
+        _class: RestartLocationSpecifier
+        value: 'BEFORE'
+      target:
+        _class: SpecialReference
+        value: 'NONE'
+  - script: 'restart at'
     result:
-      _class: UntilDo
-      do: 1
-      until: 2
-      otherwise: 3
-  - script: 'do 1 until 2 except when 3 then 4'
+      _class: Restart
+      location_specifier:
+        _class: RestartLocationSpecifier
+        value: 'AT'
+      target:
+        _class: SpecialReference
+        value: 'NONE'
+  - script: 'restart after'
     result:
-      _class: UntilDo
-      do: 1
-      until: 2
-      except_when:
-      - _class: ExceptWhen
-        predicate: 3
-        then: 4
-      otherwise: null
-  - script: 'do 1 until 2 except when 3 then 4 otherwise 5'
+      _class: Restart
+      location_specifier:
+        _class: RestartLocationSpecifier
+        value: 'AFTER'
+      target:
+        _class: SpecialReference
+        value: 'NONE'
+  - script: 'restart before !'
     result:
-      _class: UntilDo
-      do: 1
-      until: 2
-      except_when:
-      - _class: ExceptWhen
-        predicate: 3
-        then: 4
-      otherwise: 5
-  - script: 'do 1 + 2 until 3'
+      _class: Restart
+      location_specifier:
+        _class: RestartLocationSpecifier
+        value: 'BEFORE'
+      target:
+        _class: SpecialReference
+        value: 'NONE'
+  - script: 'restart at !'
     result:
-      _class: UntilDo
-      do:
-        _class: Math
-        left: 1
-        op: '+'
-        right: 2
-      until: 3
-      otherwise: null
-  - script: 'do 1 until 2 > 3'
+      _class: Restart
+      location_specifier:
+        _class: RestartLocationSpecifier
+        value: 'AT'
+      target:
+        _class: SpecialReference
+        value: 'NONE'
+  - script: 'restart after !'
     result:
-      _class: UntilDo
-      do: 1
-      until:
-        _class: Comparison
-        left: 2
-        op: '>'
-        right: 3
-      otherwise: null
-  - script: 'do 1 + 2 until 3 >= 4'
+      _class: Restart
+      location_specifier:
+        _class: RestartLocationSpecifier
+        value: 'AFTER'
+      target:
+        _class: SpecialReference
+        value: 'NONE'
+  - script: 'restart before ~'
     result:
-      _class: UntilDo
-      do:
-        _class: Math
-        left: 1
-        op: '+'
-        right: 2
-      until:
-        _class: Comparison
-        left: 3
-        op: '>='
-        right: 4
-      otherwise: null
-  - script: 'do test = 1d6 until 3'
+      _class: Restart
+      location_specifier:
+        _class: RestartLocationSpecifier
+        value: 'BEFORE'
+      target:
+        _class: SpecialReference
+        value: 'ROOT'
+  - script: 'restart at ~'
     result:
-      _class: UntilDo
-      do:
-        _class: Assignment
-        target: 'test'
-        value:
-          _class: Dice
-          number_of_dice: 1
-          sides: 6
-      until: 3
-      otherwise: null
-  - script: 'do 1 until test >= 5'
+      _class: Restart
+      location_specifier:
+        _class: RestartLocationSpecifier
+        value: 'AT'
+      target:
+        _class: SpecialReference
+        value: 'ROOT'
+  - script: 'restart after ~'
     result:
-      _class: UntilDo
-      do: 1
-      until:
-        _class: Comparison
-        left:
-          _class: Reference
-          value: 'test'
-        op: '>='
-        right: 5
-      otherwise: null
-  - script: 'do 1d6 until test >= 5'
+      _class: Restart
+      location_specifier:
+        _class: RestartLocationSpecifier
+        value: 'AFTER'
+      target:
+        _class: SpecialReference
+        value: 'ROOT'
+  - script: 'restart before test'
     result:
-      _class: UntilDo
-      do:
-        _class: Dice
-        number_of_dice: 1
-        sides: 6
-      until:
-        _class: Comparison
-        left:
-          _class: Reference
-          value: 'test'
-        op: '>='
-        right: 5
-      otherwise: null
-  - script: 'do 1d6 until test >= 5 otherwise 6'
+      _class: Restart
+      location_specifier:
+        _class: RestartLocationSpecifier
+        value: 'BEFORE'
+      target: 'test'
+  - script: 'restart at test'
     result:
-      _class: UntilDo
-      do:
-        _class: Dice
-        number_of_dice: 1
-        sides: 6
-      until:
-        _class: Comparison
-        left:
-          _class: Reference
-          value: 'test'
-        op: '>='
-        right: 5
-      otherwise: 6
-  - script: 'do test = 1d6 until test >= 5'
+      _class: Restart
+      location_specifier:
+        _class: RestartLocationSpecifier
+        value: 'AT'
+      target: 'test'
+  - script: 'restart after test'
     result:
-      _class: UntilDo
-      do:
-        _class: Assignment
-        target: 'test'
-        value:
-          _class: Dice
-          number_of_dice: 1
-          sides: 6
-      until:
-        _class: Comparison
-        left:
-          _class: Reference
-          value: 'test'
-        op: '>='
-        right: 5
-      otherwise: null
-  - script: 'do test = test & 1d6 until test > 25'
-    result:
-      _class: UntilDo
-      do:
-        _class: Assignment
-        target: 'test'
-        value:
-          _class: RollMath
-          left:
-            _class: Reference
-            value: 'test'
-          op: '&'
-          right:
-            _class: Dice
-            number_of_dice: 1
-            sides: 6
-      until:
-        _class: Comparison
-        left:
-          _class: Reference
-          value: 'test'
-        op: '>'
-        right: 25
-      otherwise: null
-  - script: 'do test = test & 1d6 until test > 25 otherwise test = 2'
-    result:
-      _class: UntilDo
-      do:
-        _class: Assignment
-        target: 'test'
-        value:
-          _class: RollMath
-          left:
-            _class: Reference
-            value: 'test'
-          op: '&'
-          right:
-            _class: Dice
-            number_of_dice: 1
-            sides: 6
-      until:
-        _class: Comparison
-        left:
-          _class: Reference
-          value: 'test'
-        op: '>'
-        right: 25
-      otherwise:
-        _class: Assignment
-        target: 'test'
-        value: 2
-  - script: 'do test = test & 1d6 until test > 25 otherwise test = {2}'
-    result:
-      _class: UntilDo
-      do:
-        _class: Assignment
-        target: 'test'
-        value:
-          _class: RollMath
-          left:
-            _class: Reference
-            value: 'test'
-          op: '&'
-          right:
-            _class: Dice
-            number_of_dice: 1
-            sides: 6
-      until:
-        _class: Comparison
-        left:
-          _class: Reference
-          value: 'test'
-        op: '>'
-        right: 25
-      otherwise:
-        _class: Assignment
-        target: 'test'
-        value:
-          _class: Reduce
-          value: 2
-  - script: 'do test = {@7} until test > 25'
-    result:
-      _class: UntilDo
-      do:
-        _class: Assignment
-        target: 'test'
-        value:
-          _class: Enlarge
-          size: null
-          value: 7
-      until:
-        _class: Comparison
-        left:
-          _class: Reference
-          value: 'test'
-        op: '>'
-        right: 25
-      otherwise: null
-  - script: 'do test = test & 1d6 until test > 25 otherwise test = {@}'
-    result:
-      _class: UntilDo
-      do:
-        _class: Assignment
-        target: 'test'
-        value:
-          _class: RollMath
-          left:
-            _class: Reference
-            value: 'test'
-          op: '&'
-          right:
-            _class: Dice
-            number_of_dice: 1
-            sides: 6
-      until:
-        _class: Comparison
-        left:
-          _class: Reference
-          value: 'test'
-        op: '>'
-        right: 25
-      otherwise:
-        _class: Assignment
-        target: 'test'
-        value:
-          _class: Enlarge
-          size: null
-          value: null
-  - script: 'do test = test & 1d6 until test > 25 otherwise test = {@0}'
-    result:
-      _class: UntilDo
-      do:
-        _class: Assignment
-        target: 'test'
-        value:
-          _class: RollMath
-          left:
-            _class: Reference
-            value: 'test'
-          op: '&'
-          right:
-            _class: Dice
-            number_of_dice: 1
-            sides: 6
-      until:
-        _class: Comparison
-        left:
-          _class: Reference
-          value: 'test'
-        op: '>'
-        right: 25
-      otherwise:
-        _class: Assignment
-        target: 'test'
-        value:
-          _class: Enlarge
-          size: null
-          value: 0
+      _class: Restart
+      location_specifier:
+        _class: RestartLocationSpecifier
+        value: 'AFTER'
+      target: 'test'
